fix overflow image border on col-sm

--- a/css/creative.css
+++ b/css/creative.css
@@ -471,6 +471,12 @@ body {
   outline: 2px solid #777;
   outline-offset: -1px;
 }
+@media (max-width: 992px), (min-width: 767px) {
+  #overflow-img {
+    outline: 0px;
+    outline-offset: -1px;
+  }
+}
 
 .sectionHr {
   border-color: #737373;
